--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.20.6-R0.1-SNAPSHOT</version>
+            <version>1.21.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -122,8 +122,8 @@
         </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.20.6-R0.1-SNAPSHOT</version>
+            <artifactId>spigot</artifactId>
+            <version>1.21.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -131,7 +131,7 @@
             <artifactId>worldedit-bukkit</artifactId>
             <version>7.2.15-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${basedir}/libs/worldedit-bukkit-7.2.15.jar</systemPath>
+            <systemPath>${basedir}/libs/worldedit-bukkit-7.3.6.jar</systemPath>
         </dependency>
     </dependencies>
     <properties>
